README: alpine images are deprecated
Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -18,7 +18,7 @@
 - `<%= path.tr("/","-") %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
 <% end %>
 
-### Alpine Linux
+### Alpine Linux (This is deprecated. Use Debian images instead)
 
 <% alpine.each do |image| %>
 <% path = image.split(":").first %>
