--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -181,7 +181,7 @@
     chunk_limit_size 2M
     # Cap the combined memory usage of this buffer and the one below to
     # 2MiB/chunk * (6 + 2) chunks = 16 MiB
-    queued_chunks_limit_size 6
+    queue_limit_length 6
     # Never wait more than 5 seconds before flushing logs in the non-error case.
     flush_interval 5s
     # Never wait longer than 30 seconds between retries.
