--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -11,6 +11,12 @@
 @include kubernetes.conf
 @include conf.d/*.conf
 
+<filter **>
+  <record>
+    cluster #{ENV['CLUSTER_NAME']}
+  </record>
+</filter>
+
 <% case target when "elasticsearch"%>
 <match **>
    @type elasticsearch
@@ -72,6 +78,15 @@
 <% if is_v1 %>
   json_handler yajl # To avoid UndefinedConversionError
 <% end %>
+</match>
+<% when "sqs" %>
+<match **>
+  # docs: https://github.com/ixixi/fluent-plugin-sqs
+  @type sqs
+  @id sqs
+  sqs_url "#{ENV['SQS_URL']}"
+  aws_key_id "#{ENV['AWS_ACCESS_KEY_ID']}"
+  aws_sec_key "#{ENV['AWS_SECRET_ACCESS_KEY']}"
 </match>
 <%  when "s3"%>
 <match **>
