Update base image to new v1.3.3 images
Since this version, we have several changes:
- Drop v0.12 update
- Add verion to each image

Signed-off-by: Masahiro Nakagawa <repeatedly@gmail.com>

--- a/templates/entrypoint.sh.erb
+++ b/templates/entrypoint.sh.erb
@@ -1,4 +1,4 @@
-#!/usr/bin/dumb-init /bin/sh
+#!/bin/sh
 
 <% target = (dockerfile.split("/").last.split("-").last) %>
 <% if target == "elasticsearch" %>
