--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -7,6 +7,7 @@
 
 ## Supported tags and respective `Dockerfile` links
 
+See also dockerhub tags page: https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset/tags
 <% images = all_images.split(" ") %>
 <% debian = images.select { |i| i.match("debian") } %>
 <% alpine = images.select { |i| i.match("alpine") } %>
@@ -14,8 +15,8 @@
 ### Debian
 
 <% debian.each do |image| %>
-<% path = image.split(":").first %>
-- `<%= path.tr("/","-") %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
+<% path = image.split(":").first; tags = image.split(":").last %>
+- `<%= tags %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
 <% end %>
 - `v0.12-debian-elasticsearch` [docker-image/v0.12/debian-elasticsearch/Dockerfile](docker-image/v0.12/debian-elasticsearch/Dockerfile)
 - `v0.12-debian-loggly` [docker-image/v0.12/debian-loggly/Dockerfile](docker-image/v0.12/debian-loggly/Dockerfile)
@@ -67,8 +68,8 @@ Fluentd versioning is as follows:
 
 | Series | Description                         |
 |--------|-------------------------------------|
-| v0.12  | Old stable, production ready        |
 | v1.x   | stable |
+| v0.12  | Old stable, no longer updated|
 
 ## Settings
 
@@ -76,6 +77,23 @@ Fluentd versioning is as follows:
 
 In Kubernetes and default setting, fluentd needs root permission to read logs in `/var/log` and write `pos_file` to `/var/log`.
 To avoid permission error, you need to set `FLUENT_UID` environment variable to `0` in your Kubernetes configuration.
+
+### Disable systemd input
+
+If you don't setup systemd in the container, fluentd shows following messages by default configuration.
+
+```
+[warn]: #0 [in_systemd_bootkube] Systemd::JournalError: No such file or directory retrying in 1s
+[warn]: #0 [in_systemd_kubelet] Systemd::JournalError: No such file or directory retrying in 1s
+[warn]: #0 [in_systemd_docker] Systemd::JournalError: No such file or directory retrying in 1s
+```
+
+You can suppress these messages by setting `disable` to `FLUENTD_SYSTEMD_CONF` environment variable in your kubernetes configuration.
+
+### Disable sed execution on elasticsearch image
+
+By historical reason, elasaticsearch image executes `sed` command during startup phase when `FLUENT_ELASTICSEARCH_USER` or `FLUENT_ELASTICSEARCH_PASSWORD` is specified. This sometimes causes a problem with read only mount.
+To avoid this problem, set "true" to `FLUENT_ELASTICSEARCH_SED_DISABLE` environment variable in your kubernetes configuration.
 
 ## Maintainers
 
