--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -17,7 +17,7 @@ ENV GEM_HOME /fluentd/vendor/bundle/ruby/2.3.0
 ENV FLUENTD_DISABLE_BUNDLER_INJECTION 1
 
 COPY Gemfile* /fluentd/
-  RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% if target == "graylog" %> build-essential patch zlib1g-dev liblzma-dev<% end %><% if requires_git %> git<% end %>" \
+  RUN buildDeps="sudo make gcc g++ libc-dev ruby-dev libffi-dev<% if target == "graylog" %> build-essential patch zlib1g-dev liblzma-dev<% elsif target == "kafka" %> build-essential libgeoip-dev autoconf automake libtool pkg-config<% end %><% if requires_git %> git<% end %>" \
      && apt-get update \
      && apt-get upgrade -y \
      && apt-get install \
