--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -81,6 +81,7 @@ gem "fluent-plugin-papertrail"
 gem "fluent-plugin-kubernetes_remote_syslog"
 <% when "kafka" %>
 gem "fluent-plugin-kafka", "~> 0.7.9"
+gem "snappy", "~> 0.0.15"
 <% when "kinesis" %>
 <% if is_v1 %>
 gem "fluent-plugin-kinesis", "~> 2.1.1"
