--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -146,6 +146,7 @@ Some images are contributed by users. If you have a problem/question for followi
 - Amazon Kinesis : @shiftky
 - logz.io : @SaMnCo / @jamielennox
 - splunkhec: @FutureSharks
+- logsense: @perk / @pmaciolek
 
 ### References
 
