--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -380,4 +380,25 @@
 <% end %>
 </match>
 
+<%  when "logsense"%>
+<filter **>
+  @type record_transformer
+  <record>
+    logsense_token "#{ENV['LOGSENSE_TOKEN']}"
+  </record>
+</filter>
+
+<match **>
+  @type forward
+  send_timeout 60s
+  recover_wait 10s
+  hard_timeout 60s
+  transport tls
+  tls_verify_hostname true
+  <server>
+    host "logs.logsense.com"
+    port 32714
+  </server>
+</match>
+
 <% end %>
