--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -71,6 +71,7 @@
   log_group_name "#{ENV['LOG_GROUP_NAME']}"
   auto_create_stream true
   use_tag_as_stream true
+  retention_in_days "#{ENV['RETENTION_IN_DAYS']}"
 <% if is_v1 %>
   json_handler yajl # To avoid UndefinedConversionError
   log_rejected_request "#{ENV['LOG_REJECTED_REQUEST']}" # Log rejected request for missing parts
