--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -65,6 +65,27 @@
    @log_level info
    loggly_url "https://logs-01.loggly.com/bulk/#{ENV['LOGGLY_TOKEN']}/tag/#{ENV['LOGGLY_TAGS'] || 'fluentd'}/bulk"
 </match>
+<%  when "datadog"%>
+<filter kubernetes.**>
+    @type record_transformer
+    enable_ruby
+    <record>
+      status ${if record["log"].include? "warn" then "WARN" elsif record["log"].include? "debug" then "DEBUG" elsif record["stream"] == "stderr" then "ERROR" else "INFO" end}
+      host "#{ENV['DATADOG_NODE_NAME']}"
+    </record>
+</filter>
+
+<match kubernetes.**>
+   @type datadog
+   @id out_datadog
+   api_key "#{ENV['DATADOG_API_KEY']}"
+   include_tag_key true
+   tag_key 'tag'
+   dd_source "#{ENV['DATADOG_SOURCE'] || 'fluentd'}"
+   dd_tags "#{ENV['DATADOG_TAGS'] || 'fluentd:fluentd'}"
+   dd_sourcecategory "#{ENV['DATADOG_SOURCE_CATEGORY'] || 'fluentd'}"
+</match>
+
 <%  when "cloudwatch"%>
 <match **>
   @type cloudwatch_logs
