--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -85,6 +85,7 @@ gem "fluent-plugin-papertrail"
 gem "fluent-plugin-kubernetes_remote_syslog"
 <% when "kafka" %>
 gem "fluent-plugin-kafka", "~> 0.7.9"
+gem "zookeeper", "~> 1.4.11"
 gem "snappy", "~> 0.0.15"
 <% when "kinesis" %>
 <% if is_v1 %>
