Extend environment variable for syslog image
Primary goal is to allow configuration of TLS parameters, but
additionally all other relevant variables can now also be defined via
environment variables.

Fixes #271

Signed-off-by: Lukas Grossar <lukas.grossar@adfinis-sygroup.ch>

--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -305,9 +305,12 @@
   @id out_kube_remote_syslog
   host "#{ENV['SYSLOG_HOST']}"
   port "#{ENV['SYSLOG_PORT']}"
-  severity debug
-  tag fluentd
+  facility "#{ENV['SYSLOG_FACILITY'] || 'user'}"
+  severity "#{ENV['SYSLOG_SEVERITY'] || 'debug'}"
+  tag "#{ENV['SYSLOG_TAG'] || 'fluentd'}"
   protocol "#{ENV['SYSLOG_PROTOCOL'] || 'tcp'}" 
+  tls "#{ENV['SYSLOG_TLS'] || 'false'}"
+  ca_file "#{ENV['SYSLOG_CA_FILE'] || ''}"
   packet_size 65535
   output_data_type ltsv
 </match>
