--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -22,7 +22,8 @@ gem "fluent-plugin-rewrite-tag-filter", "~> 2.1.0"
 <% end %>
 <% case target when "elasticsearch" %>
 <% if is_v1 %>
-gem "fluent-plugin-elasticsearch", "~> 3.4.2"
+gem "elasticsearch", "~> 6.0"
+gem "fluent-plugin-elasticsearch", "~> 3.5.1"
 <% else %>
 gem "fluent-plugin-elasticsearch"
 <% end %>
