--- a/templates/conf/kubernetes.conf.erb
+++ b/templates/conf/kubernetes.conf.erb
@@ -17,11 +17,11 @@
   read_from_head true
 <% if is_v1 %>
   <parse>
-    @type json
+    @type json_in_json
     time_format %Y-%m-%dT%H:%M:%S.%NZ
   </parse>
 <% else %>
-  format json
+  format json_in_json
   time_format %Y-%m-%dT%H:%M:%S.%NZ
 <% end %>
 </source>
