--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -13,7 +13,7 @@ gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
 gem "fluent-plugin-concat", "~> 2.3.0"
 gem "fluent-plugin-grok-parser", "~> 2.5.0"
 gem "fluent-plugin-prometheus", "~> 1.3.0"
-gem 'fluent-plugin-json-in-json-2'
+gem 'fluent-plugin-json-in-json-2', ">= 1.0.2"
 <% if !is_v1 %>
 gem "fluent-plugin-secure-forward"
 gem "fluent-plugin-record-reformer"
