--- a/templates/conf/kubernetes.conf.erb
+++ b/templates/conf/kubernetes.conf.erb
@@ -17,7 +17,7 @@
   read_from_head true
 <% if is_v1 %>
   <parse>
-    @type json_in_json
+    @type "#{ENV['FLUENT_CONTAINER_TAIL_PARSER_TYPE'] || 'json'}"
     time_format %Y-%m-%dT%H:%M:%S.%NZ
   </parse>
 <% else %>
