Made the protocol available to the graylog config
Signed-off-by: Spazzy <brendankamp757@gmail.com>

--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -167,6 +167,7 @@
   include_tag_key true
   host "#{ENV['FLUENT_GRAYLOG_HOST']}"
   port "#{ENV['FLUENT_GRAYLOG_PORT']}"
+  protocol "#{ENV['FLUENT_GRAYLOG_PROTOCOL'] || 'udp'}"
   <buffer>
     flush_thread_count 8
     flush_interval 5s
