--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -29,6 +29,9 @@ gem "fluent-plugin-elasticsearch", "~> 3.5.5"
 <% when "elasticsearch7" %>
 gem "elasticsearch", "~> 7.0"
 gem "fluent-plugin-elasticsearch", "~> 3.5.5"
+<% when "awselasticsearch6" %>
+gem "elasticsearch", "~> 7.0"
+gem "fluent-plugin-aws-elasticsearch-service"
 <% when "logentries" %>
 #gem "fluent-plugin-logentries"
 <% when "loggly"%>
