--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -101,6 +101,8 @@ gem "fluent-plugin-kinesis"
 <% end %>
 <% when "splunkhec" %>
 gem "fluent-plugin-splunk-enterprise"
+<% when "mongo" %>
+gem "fluent-plugin-mongo", "~> 1.3.0"
 <% end %>
 <% if is_v1 %>
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 2.3.0"
