Adding SASL_SSL dependencies for the rdkafka plugin     Note that the installation of krb5-user is interactive which is why we add export DEBIAN_FRONTEND=noninteractive as per: https://askubuntu.com/questions/1017999/install-kerberos-client-without-interactive-session     A post test is then done to make sure that rdkafka is linked against the sasl dependency properly
Signed-off-by: naumanrana <nauman.09@gmail.com>

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -91,7 +91,8 @@ gem "fluent-plugin-remote_syslog"
 gem "fluent-plugin-kubernetes_remote_syslog"
 <% end %>
 <% when "kafka" %>
-gem "fluent-plugin-kafka", "~> 0.7.9"
+gem "rdkafka", "~> 0.7.0"
+gem "fluent-plugin-kafka", "~> 0.12.2"
 gem "snappy", "~> 0.0.15"
 <% when "kinesis" %>
 <% if is_v1 %>
