created module for all AWS services
Signed-off-by: spensireli <spencerconklin92@gmail.com>

This creates a new version labeled "debian-aws".

It is pretty simple, it includes S3, Kinesis, and CloudWatch. This is not as light weight as choosing one of the versions for the specific service, however this would allow usage for multiple aws plugins.

This is important if you want to use FluentD to send to both CloudWatch & S3 or CloudWatch & Kinesis etc.

Often cost implications of CloudWatch make it beneficial to only send some data to CloudWatch and a large portion to S3.

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -53,6 +53,12 @@ gem "fluent-plugin-kafka", "~> 0.12.2"
 gem "snappy", "~> 0.0.15"
 <% when "kinesis" %>
 gem "fluent-plugin-kinesis", "~> 2.1.1"
+<% when "aws" %>
+gem "aws-sdk-s3", "~> 1.0"
+gem "aws-sdk-cloudwatchlogs", "~> 1.0"
+gem "fluent-plugin-s3", "~> 1.1.6"
+gem "fluent-plugin-kinesis", "~> 2.1.1"
+gem "fluent-plugin-cloudwatch-logs", "~> 0.9.3"
 <% when "splunkhec" %>
 gem "fluent-plugin-splunk-enterprise"
 <% end %>
