Unify arm64 and x86_64 image tags
Signed-off-by: Hiroshi Hatake <hatake@clear-code.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -9,7 +9,7 @@
 
 See also dockerhub tags page: https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset/tags
 <% images = all_images.split(" ") %>
-<% debian_arm64 = images.select { |i| i.match(/debian-.*-arm64/) } %>
+<% debian_arm64 = images.select { |i| i.match(/arm64/) } %>
 <% debian = images.select { |i| i.match("debian") }.reject { |i| debian_arm64.include?(i) } %>
 <% alpine = images.select { |i| i.match("alpine") } %>
 
