--- a/templates/conf/prometheus.conf.erb
+++ b/templates/conf/prometheus.conf.erb
@@ -4,6 +4,7 @@
 # Prometheus metric exposed on 0.0.0.0:24231/metrics
 <source>
   @type prometheus
+  @id in_prometheus
   bind "#{ENV['FLUENTD_PROMETHEUS_BIND'] || '0.0.0.0'}"
   port "#{ENV['FLUENTD_PROMETHEUS_PORT'] || '24231'}"
   metrics_path "#{ENV['FLUENTD_PROMETHEUS_PATH'] || '/metrics'}"
@@ -11,4 +12,5 @@
 
 <source>
   @type prometheus_output_monitor
+  @id in_prometheus_output_monitor
 </source>
