Add avro plugin to kafka image
Signed-off-by: Patrik Marxer <patrik.marxer@swisscom.com>

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -53,6 +53,7 @@ gem "fluent-plugin-remote_syslog"
 <% when "kafka", "kafka2" %>
 gem "rdkafka", "~> 0.7.0"
 gem "fluent-plugin-kafka", "~> 0.12.2"
+gem "fluent-plugin-avro", "~> 1.1.1"
 gem "snappy", "~> 0.0.15"
 <% when "kinesis" %>
 gem "fluent-plugin-kinesis", "~> 3.2.3"
