Emphasize what image is supported
Before:

- `v1.12.0-debian-azureblob-1.1,v1.12-debian-azureblob-1` [docker-image/v1.12/debian-azureblob/Dockerfile](docker-image/v1.12/debian-azureblob/Dockerfile)

After:

+- `Azureblob` [Dockerfile](docker-image/v1.12/debian-azureblob/Dockerfile)
+  - `docker pull fluent/fluentd-kubernetes-daemonset:v1.12.0-debian-azureblob-1.1`
+  - `docker pull fluent/fluentd-kubernetes-daemonset:v1.12-debian-azureblob-1`

Thus, it makes easy to pull image (copy&past)

Signed-off-by: Kentaro Hayashi <kenhys@gmail.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -20,13 +20,19 @@ See also dockerhub tags page: https://hub.docker.com/r/fluent/fluentd-kubernetes
 ##### x86_64 images
 <% debian.each do |image| %>
 <% path = image.split(":").first; tags = image.split(":").last %>
-- `<%= tags %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
+- `<%= tags.split(",").first.split("-")[2].capitalize %>` [Dockerfile](docker-image/<%= path %>/Dockerfile)
+<% tags.split(",").each do |tag| %>
+  - `docker pull fluent/fluentd-kubernetes-daemonset:<%= tag %>`
+<% end %>
 <% end %>
 
 ##### arm64 images
 <% debian_arm64.each do |image| %>
 <% path = image.split(":").first; tags = image.split(":").last %>
-- `<%= tags %>` [docker-image/<%= path %>/Dockerfile](docker-image/<%= path %>/Dockerfile)
+- `<%= tags.split(",").first.split("-")[2].capitalize %>` [Dockerfile](docker-image/<%= path %>/Dockerfile)
+<% tags.split(",").each do |tag| %>
+  - `docker pull fluent/fluentd-kubernetes-daemonset:<%= tag %>`
+<% end %>
 <% end %>
 
 
