Copy tail_container_parse.conf into Docker Images
Signed-off-by: Patrick Moore <patrick.moore.ctr@tri.global>

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -54,6 +54,7 @@ COPY ./conf/fluent.conf /fluentd/etc/
 COPY ./conf/systemd.conf /fluentd/etc/
 COPY ./conf/kubernetes.conf /fluentd/etc/
 COPY ./conf/prometheus.conf /fluentd/etc/
+COPY ./conf/tail_container_parse.conf /fluentd/etc/
 RUN touch /fluentd/etc/disable.conf
 
 # Copy plugins
