--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -53,8 +53,9 @@ gem "fluent-plugin-papertrail", "~> 0.2.6"
 gem "fluent-plugin-remote_syslog"
 <% when "kafka", "kafka2" %>
 gem "rdkafka", "~> 0.7.0"
-gem "fluent-plugin-kafka", "~> 0.12.2"
+gem "fluent-plugin-kafka", "~> 0.16.0"
 gem "fluent-plugin-avro", "~> 1.1.1"
+gem "fluent-plugin-parser-avro", "~> 0.3.1"
 gem "snappy", "~> 0.0.15"
 <% when "kinesis" %>
 gem "fluent-plugin-kinesis", "~> 3.2.3"
