--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -154,6 +154,7 @@
   @type azure-storage-append-blob
   @id out_azure_storage_append_blob
 
+  azure_cloud                     "#{ENV['AZUREBLOB_AZURE_CLOUD']}"
   azure_storage_account           "#{ENV['AZUREBLOB_ACCOUNT_NAME']}"
   azure_storage_access_key        "#{ENV['AZUREBLOB_ACCOUNT_KEY']}"
   azure_storage_connection_string "#{ENV['AZUREBLOB_CONNECTION_STRING']}"
