Accept manifest-tool command failures
Signed-off-by: Hiroshi Hatake <hatake@calyptia.com>

--- a/templates/post_push.erb
+++ b/templates/post_push.erb
@@ -21,8 +21,9 @@ for tag in {<%= image_tags %>}; do
   archTag=${archTag/arm64/ARCH}
   noArchTag=${tag/-amd64/}
   noArchTag=${noArchTag/-arm64/}
+  # Accept manifest-tool command failure.
   ./manifest-tool push from-args \
       --platforms linux/amd64,linux/arm64 \
       --template ${repoName}:${archTag} \
-      --target ${repoName}:${noArchTag}
+      --target ${repoName}:${noArchTag} || true
 done
