Reduce watch version to latest one only
There is a case that pile of security alerts are raised.

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/dependabot.yml.erb
+++ b/templates/dependabot.yml.erb
@@ -8,7 +8,8 @@ updates:
     schedule:
       interval: "daily"
   # Watch dependencies for current stable only
-<% available_gemfile_paths = Dir.glob("docker-image/**/*/Gemfile") %>
+<% latest_version = Dir.glob("docker-image/*").sort.last %>
+<% available_gemfile_paths = Dir.glob("#{latest_version}/**/Gemfile") %>
 <% available_gemfile_paths.each do |gemfile_path| %>
 <% path = File.dirname(gemfile_path) %>
   - package-ecosystem: "bundler"
