dependabot: Try to receive only security updates
We don't intend to receive all updates, we want only security updates.
For this purpose, `open-pull-requests-limit: 0` seems effective because
it doesn't affect to security updates:

https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/configuration-options-for-dependency-updates#open-pull-requests-limit

Signed-off-by: Takuro Ashie <ashie@clear-code.com>

--- a/templates/dependabot.yml.erb
+++ b/templates/dependabot.yml.erb
@@ -7,12 +7,14 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 0
   # Watch dependencies for current stable only
-<% available_gemfile_paths = Dir.glob("docker-image/**/*/Gemfile") %>
+<% available_gemfile_paths = Dir.glob("docker-image/**/*/Gemfile").sort %>
 <% available_gemfile_paths.each do |gemfile_path| %>
 <% path = File.dirname(gemfile_path) %>
   - package-ecosystem: "bundler"
     directory: "/<%= path %>"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 0
 <% end %>
