Set open-pull-requests-limit by default
See https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/configuration-options-for-dependency-updates#open-pull-requests-limit

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/dependabot.yml.erb
+++ b/templates/dependabot.yml.erb
@@ -7,6 +7,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 0
   # Watch dependencies for current stable only
 <% latest_version = Dir.glob("docker-image/*").sort.last %>
 <% available_gemfile_paths = Dir.glob("#{latest_version}/**/Gemfile") %>
@@ -16,4 +17,5 @@ updates:
     directory: "/<%= path %>"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 0
 <% end %>
