Fix wrong version sort
v1.10 and v1.9 should be sorted to v1.9, v1.10 order.

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/dependabot.yml.erb
+++ b/templates/dependabot.yml.erb
@@ -9,7 +9,7 @@ updates:
       interval: "daily"
     open-pull-requests-limit: 0
   # Watch dependencies for current stable only
-<% latest_version = Dir.glob("docker-image/*").sort.last %>
+<% latest_version = Dir.glob("docker-image/*").sort_by {|version| Gem::Version.new(version.split('/').last.delete('v'))}.last %>
 <% available_gemfile_paths = Dir.glob("#{latest_version}/**/Gemfile") %>
 <% available_gemfile_paths.each do |gemfile_path| %>
 <% path = File.dirname(gemfile_path) %>
