--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -37,6 +37,8 @@ gem "fluent-plugin-google-cloud", "~> 0.4.10"
 <% when "azureblob" %>
 gem "azure-storage-blob", "~> 2.0"
 gem "fluent-plugin-azure-storage-append-blob-lts", "~> 0.6.0"
+<% when "azureservicebus" %>
+gem "fluent-plugin-servicebus-queue", :git => "git://github.com/Azure/fluent-plugin-servicebus-queue.git"
 <% when "s3" %>
 gem "aws-sdk-s3", "~> 1.91"
 gem "fluent-plugin-s3", "~> 1.5.1"
