--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -1,5 +1,8 @@
 # Fluentd Daemonset for Kubernetes
 
+| :exclamation: README.md is generated from templates/README.md.erb |
+|-------------------------------------------------------------------|
+
 [![Docker Stars](https://img.shields.io/docker/stars/fluent/fluentd-kubernetes-daemonset.svg)](https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset)
 [![Docker Pulls](https://img.shields.io/docker/pulls/fluent/fluentd-kubernetes-daemonset.svg)](https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset)
 [![ImageLayers Size](https://img.shields.io/imagelayers/image-size/fluent/fluentd-kubernetes-daemonset/latest.svg)](https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset)
