--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -22,9 +22,9 @@ FROM fluent/fluentd:<%= fluentd_ver %>-debian-1.0
 LABEL maintainer="Eduardo Silva <eduardo@treasure-data.com>"
 USER root
 WORKDIR /home/fluent
-ENV PATH /fluentd/vendor/bundle/ruby/2.6.0/bin:$PATH
-ENV GEM_PATH /fluentd/vendor/bundle/ruby/2.6.0
-ENV GEM_HOME /fluentd/vendor/bundle/ruby/2.6.0
+ENV PATH /fluentd/vendor/bundle/ruby/<%= ruby_version %>.0/bin:$PATH
+ENV GEM_PATH /fluentd/vendor/bundle/ruby/<%= ruby_version %>.0
+ENV GEM_HOME /fluentd/vendor/bundle/ruby/<%= ruby_version %>.0
 # skip runtime bundler installation
 ENV FLUENTD_DISABLE_BUNDLER_INJECTION 1
 
