--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -25,6 +25,8 @@ gem "elasticsearch", "~> 7.0"
 gem "fluent-plugin-elasticsearch", "~> 5.1.1"
 gem "elasticsearch-xpack", "~> 7.0"
 gem "fluent-plugin-dedot_filter", "~> 1.0"
+<% when "opensearch" %>
+gem "fluent-plugin-opensearch", "~> 1.0.0"
 <% when "logentries" %>
 #gem "fluent-plugin-logentries"
 <% when "loggly"%>
