--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -59,6 +59,26 @@
      retry_forever true
    </buffer>
 </match>
+<%  when "opensearch"%>
+<match **>
+  @type opensearch
+  @id out_os
+  @log_level info
+  include_tag_key true
+  host "#{ENV['FLUENT_OPENSEARCH_HOST']}"
+  port "#{ENV['FLUENT_OPENSEARCH_PORT']}"
+  path "#{ENV['FLUENT_OPENSEARCH_PATH']}"
+  scheme "#{ENV['FLUENT_OPENSEARCH_SCHEME'] || 'http'}"
+  ssl_verify "#{ENV['FLUENT_OPENSEARCH_SSL_VERIFY'] || 'true'}"
+  ssl_version "#{ENV['FLUENT_OPENSEARCH_SSL_VERSION'] || 'TLSv1_2'}"
+  ca_file "#{ENV['FLUENT_OPENSEARCH_CA_PATH']}"
+  user "#{ENV['FLUENT_OPENSEARCH_USER']}"
+  password "#{ENV['FLUENT_OPENSEARCH_PASSWORD']}"
+  client_cert "#{ENV['FLUENT_OPENSEARCH_CLIENT_CERT']}"
+  client_key "#{ENV['FLUENT_OPENSEARCH_CLIENT_KEY']}"
+  client_key_pass "#{ENV['FLUENT_OPENSEARCH_CLIENT_KEY_PASS']}"
+  index_name "#{ENV['FLUENT_OPENSEARCH_INDEX_NAME'] || 'fluentd'}"
+</match>
 <%  when "logentries"%>
 <match **>
    @type logentries
