--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -8,6 +8,7 @@ source "https://rubygems.org"
 
 gem "fluentd", "<%= fluentd_ver %>"
 gem "oj", "~> 3.13.0"
+gem "rexml", "~> 3.2.5"
 gem "fluent-plugin-multi-format-parser", "~> 1.0.0"
 gem "fluent-plugin-concat", "~> 2.5.0"
 gem "fluent-plugin-grok-parser", "~> 2.6.2"
