Set default flush_interval to 5 for forward and syslog images
The default is 60, which results in a serious delay. Most of the other
backends set a lower interval. Since the work of forward and syslog is
minimal, flushing every 5 seconds should be safe.

The intervals can be set by env variables FLUENT_SYSLOG_FLUSH_INTERVAL
and FLUENT_FORWARD_FLUSH_INTERVAL respectively.

Signed-off-by: Orgad Shaneh <orgad.shaneh@audiocodes.com>

--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -387,6 +387,7 @@
   packet_size 65535
 
   <buffer kubernetes_host>
+    flush_interval "#{ENV['FLUENT_SYSLOG_FLUSH_INTERVAL'] || use_default}"
   </buffer>
 
   <format>
@@ -403,6 +404,9 @@
     host "#{ENV['FLUENT_FOWARD_HOST']}"
     port "#{ENV['FLUENT_FOWARD_PORT']}"
   </server>
+  <buffer>
+    flush_interval "#{ENV['FLUENT_FORWARD_FLUSH_INTERVAL'] || use_default}"
+  </buffer>
 </match>
 
 <% when "kinesis" %>
