Add pos_file extra directory support
Let you able to run multiple fluentd on same cluster.

Signed-off-by: Alan Tang <alantang888@users.noreply.github.com>

--- a/templates/conf/kubernetes/docker.conf.erb
+++ b/templates/conf/kubernetes/docker.conf.erb
@@ -2,7 +2,7 @@
   @type tail
   @id in_tail_docker
   path /var/log/docker.log
-  pos_file /var/log/fluentd-docker.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-docker.log.pos')}"
   tag docker
   <parse>
     @type regexp
