--- a/templates/conf/kubernetes/etcd.conf.erb
+++ b/templates/conf/kubernetes/etcd.conf.erb
@@ -2,7 +2,7 @@
   @type tail
   @id in_tail_etcd
   path /var/log/etcd.log
-  pos_file /var/log/fluentd-etcd.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-etcd.log.pos')}"
   tag etcd
   <parse>
     @type none
