--- a/templates/conf/kubernetes/kube-apiserver.conf.erb
+++ b/templates/conf/kubernetes/kube-apiserver.conf.erb
@@ -3,7 +3,7 @@
   @id in_tail_kube_apiserver
   multiline_flush_interval 5s
   path /var/log/kube-apiserver.log
-  pos_file /var/log/fluentd-kube-apiserver.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-kube-apiserver.log.pos')}"
   tag kube-apiserver
   <parse>
     @type kubernetes
