--- a/templates/conf/kubernetes/kube-proxy.conf.erb
+++ b/templates/conf/kubernetes/kube-proxy.conf.erb
@@ -3,7 +3,7 @@
   @id in_tail_kube_proxy
   multiline_flush_interval 5s
   path /var/log/kube-proxy.log
-  pos_file /var/log/fluentd-kube-proxy.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-kube-proxy.log.pos')}"
   tag kube-proxy
   <parse>
     @type kubernetes
