--- a/templates/conf/kubernetes/salt.conf.erb
+++ b/templates/conf/kubernetes/salt.conf.erb
@@ -3,7 +3,7 @@
   @type tail
   @id in_tail_minion
   path /var/log/salt/minion
-  pos_file /var/log/fluentd-salt.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-salt.pos')}"
   tag salt
   <parse>
     @type regexp
