--- a/templates/conf/kubernetes/startupscript.conf.erb
+++ b/templates/conf/kubernetes/startupscript.conf.erb
@@ -2,7 +2,7 @@
   @type tail
   @id in_tail_startupscript
   path /var/log/startupscript.log
-  pos_file /var/log/fluentd-startupscript.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_DIR', ''), 'fluentd-startupscript.log.pos')}"
   tag startupscript
   <parse>
     @type syslog
