--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -228,6 +228,12 @@ oc delete pod -l k8s-app=fluentd-logging
 
 This is from [nekop's japanese article](https://nekop.hatenablog.com/entry/2018/04/20/170257).
 
+### Multiple fluentd
+
+When you want to have multiple fluentd. For example push to multiple destination like: elsticsearch + S3.
+You need to use `FLUENT_POS_EXTRA_DIR` add additional directory for pos file.
+Otherwise they share same pos file. You may found some log only on one destination.
+
 ## Note
 
 ### kafka image doesn't support zookeeper parameters
