--- a/templates/conf/kubernetes/cluster-autoscaler.conf.erb
+++ b/templates/conf/kubernetes/cluster-autoscaler.conf.erb
@@ -3,7 +3,7 @@
   @id in_tail_cluster_autoscaler
   multiline_flush_interval 5s
   path /var/log/cluster-autoscaler.log
-  pos_file /var/log/fluentd-cluster-autoscaler.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-cluster-autoscaler.log.pos')}"
   tag cluster-autoscaler
   <parse>
     @type kubernetes
