--- a/templates/conf/kubernetes/containers.conf.erb
+++ b/templates/conf/kubernetes/containers.conf.erb
@@ -2,7 +2,7 @@
   @type tail
   @id in_tail_container_logs
   path "#{ENV['FLUENT_CONTAINER_TAIL_PATH'] || '/var/log/containers/*.log'}"
-  pos_file /var/log/fluentd-containers.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-containers.log.pos')}"
   tag "#{ENV['FLUENT_CONTAINER_TAIL_TAG'] || 'kubernetes.*'}"
   exclude_path "#{ENV['FLUENT_CONTAINER_TAIL_EXCLUDE_PATH'] || use_default}"
   read_from_head true
