--- a/templates/conf/kubernetes/glbc.conf.erb
+++ b/templates/conf/kubernetes/glbc.conf.erb
@@ -3,7 +3,7 @@
   @id in_tail_glbc
   multiline_flush_interval 5s
   path /var/log/glbc.log
-  pos_file /var/log/fluentd-glbc.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-glbc.log.pos')}"
   tag glbc
   <parse>
     @type kubernetes
