--- a/templates/conf/kubernetes/kube-apiserver-audit.conf.erb
+++ b/templates/conf/kubernetes/kube-apiserver-audit.conf.erb
@@ -6,7 +6,7 @@
   @id in_tail_kube_apiserver_audit
   multiline_flush_interval 5s
   path /var/log/kubernetes/kube-apiserver-audit.log
-  pos_file /var/log/kube-apiserver-audit.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'kube-apiserver-audit.log.pos')}"
   tag kube-apiserver-audit
   <parse>
     @type multiline
