--- a/templates/conf/kubernetes/kubelet.conf.erb
+++ b/templates/conf/kubernetes/kubelet.conf.erb
@@ -3,7 +3,7 @@
   @id in_tail_kubelet
   multiline_flush_interval 5s
   path /var/log/kubelet.log
-  pos_file /var/log/fluentd-kubelet.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-kubelet.log.pos')}"
   tag kubelet
   <parse>
     @type kubernetes
