--- a/templates/conf/kubernetes/rescheduler.conf.erb
+++ b/templates/conf/kubernetes/rescheduler.conf.erb
@@ -3,7 +3,7 @@
   @id in_tail_rescheduler
   multiline_flush_interval 5s
   path /var/log/rescheduler.log
-  pos_file /var/log/fluentd-rescheduler.log.pos
+  pos_file "#{File.join('/var/log/', ENV.fetch('FLUENT_POS_EXTRA_DIR', ''), 'fluentd-rescheduler.log.pos')}"
   tag rescheduler
   <parse>
     @type kubernetes
