Remove stackdriver image
Because recent fluent-plugin-google-cloud sticks required fluentd
version to an exactly specified version, we are never able to
synchronize it with latest fluentd version.

Signed-off-by: Takuro Ashie <ashie@clear-code.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -15,8 +15,8 @@ See also dockerhub tags page: https://hub.docker.com/r/fluent/fluentd-kubernetes
 <% debian_arm64 = images.select { |i| i.match(/debian-.*-arm64/) } %>
 <% debian = images.select { |i| i.match("debian") }.reject { |i| debian_arm64.include?(i) } %>
 <% alpine = images.select { |i| i.match("alpine") } %>
-<% no_built_x86_64_images = %w(stackdriver papertrail syslog elasticsearch6) %>
-<% no_built_arm64_images = %w(stackdriver papertrail syslog logentries loggly logzio s3 elasticsearch6) %>
+<% no_built_x86_64_images = %w(papertrail syslog elasticsearch6) %>
+<% no_built_arm64_images = %w(papertrail syslog logentries loggly logzio s3 elasticsearch6) %>
 <% no_built_multiarch_images = no_built_arm64_images.dup.concat(no_built_x86_64_images).uniq %>
 
 ### Debian
@@ -25,7 +25,7 @@ See also dockerhub tags page: https://hub.docker.com/r/fluent/fluentd-kubernetes
 
 As the current limitation about the number of automated builds on hub.docker.com, there are some restrictions to ship daemonset images:
 
-* `stackdriver`, `papertrail`, `syslog` images (x86_64/arm64) won't be published anymore
+* `papertrail`, `syslog` images (x86_64/arm64) won't be published anymore
 * `logentries`, `loggly`, `logzio`, `s3` arm64 images won't be published anymore (x86_64 only supported)
 
 If you want to use above non published images, build it by yourself. Dockerfile itself is still maintained in this repository.
