Use highlight markup
See https://github.com/orgs/community/discussions/16925

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/README.md.erb
+++ b/templates/README.md.erb
@@ -1,7 +1,7 @@
 # Fluentd Daemonset for Kubernetes
 
-| :exclamation: README.md is generated from templates/README.md.erb |
-|-------------------------------------------------------------------|
+> [!CAUTION]
+> README.md is generated from templates/README.md.erb
 
 [![Docker Stars](https://img.shields.io/docker/stars/fluent/fluentd-kubernetes-daemonset.svg)](https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset)
 [![Docker Pulls](https://img.shields.io/docker/pulls/fluent/fluentd-kubernetes-daemonset.svg)](https://hub.docker.com/r/fluent/fluentd-kubernetes-daemonset)
