Fix graylog connecting issue
Closes: #1479

Feedback from @mszyzdek
ref. https://github.com/fluent/fluentd-kubernetes-daemonset/issues/1479#issuecomment-1996018837

* graylog flavour of fluentd-kubernetes-daemonset uses gelf 3.0.0 and
  this version of gelf gem has Fixnum in code,
  https://github.com/graylog-labs/gelf-rb/commit/7cc3cbb63556f54967699e034b1d51cf30bf1c6f
* in ruby 3.2 Fixnum was removed after previous deprecation in version 2.4
  https://www.ruby-lang.org/en/news/2022/12/25/ruby-3-2-0-released/
* ruby in newest fluentd was upgraded to 3.2
  https://github.com/fluent/fluentd-docker-image/commit/4f1d5e8dcdbbed10d1458edaecfb771f6ba9f05e
  so it also happened in fluentd-kubernetes-daemonset
* gelf 3.0.0 cannot work with ruby 3.2+ so we can see sad error on container start

NOTE: Even though gelf was updated to 3.1.0, still it has problem with
reloading Fluentd configuration with SIGUSR2. This is known issue
since Fluentd 1.8.0.
ref. https://github.com/fluent/fluentd/issues/2709

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -45,7 +45,7 @@ gem "fluent-plugin-s3", "~> 1.7.0"
 <% when "gcs" %>
 gem "fluent-plugin-gcs", "0.4.2"
 <% when "graylog" %>
-gem "gelf", "3.0.0"
+gem "gelf"
 gem "fluent-plugin-gelf-hs", "~> 1.0.7"
 <% when "logzio" %>
 gem "fluent-plugin-logzio", "~> 0.2.2"
