--- a/templates/conf/kubernetes.conf.erb
+++ b/templates/conf/kubernetes.conf.erb
@@ -61,7 +61,7 @@
     program ${record["kubernetes"]["container_name"]}
     severity info
     facility local0
-    message ${record['log']}
+    message ${record['log'] || record['message']}
   </record>
 </filter>
 <% end %>
