kafka,kafka2: drop needless SASL check
rdkafka x86_64-linux-gnu gem bundles statically linked SASL.

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -45,10 +45,7 @@ RUN buildDeps="sudo make gcc g++ libc-dev libffi-dev<% if target == "graylog" %>
                   '*-dev' \
  && rm -rf /var/lib/apt/lists/* \
     && gem sources --clear-all \
-    && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem<% if target == "kafka" || target == "kafka2" %> \
-    && ldd $(gem contents rdkafka | grep librdkafka.so) | grep libsasl2.so.2
-    <% end %>
-
+    && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
 # Copy configuration files
 COPY ./conf/fluent.conf /fluentd/etc/
 COPY ./conf/systemd.conf /fluentd/etc/
