Add plugin for Datadog
https://github.com/DataDog/fluent-plugin-datadog
Signed-off-by: nbifrye <nbifrye@gmail.com>

--- a/templates/conf/fluent.conf.erb
+++ b/templates/conf/fluent.conf.erb
@@ -400,4 +400,11 @@
   </buffer>
 </match>
 
+<% when "datadog" %>
+<match **>
+  @type datadog
+  @id out_datadog
+  api_key "#{ENV['DD_API_KEY']}"
+</match>
+
 <% end %>
