--- a/templates/Gemfile.erb
+++ b/templates/Gemfile.erb
@@ -63,6 +63,8 @@ gem "snappy", "~> 0.4.0"
 gem "fluent-plugin-kinesis", "~> 3.6.1"
 <% when "splunkhec" %>
 gem "fluent-plugin-splunk-enterprise"
+<% when "datadog" %>
+gem "fluent-plugin-datadog", "~> 0.14.4"
 <% end %>
 gem "fluent-plugin-kubernetes_metadata_filter", "~> 3.8.0"
 <% if !is_alpine %>
